2023-09-20T00:40:56Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6242487658 # 1176
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-20
* notice: last 14d: unq all: 3 18
* notice: prev accum: outdated-unq outdated-all / unq all: 625 990 / 642 1011
* notice: next accum: outdated-unq outdated-all / unq all: 627 993 / 642 1012
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -1 -1 / +2 +3 -0 -0 / 2 3
* notice: removed / changed dates: [2023-09-05] / [2023-09-06 2023-09-19]

2023-09-19T08:12:37Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6232907782 # 1174
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-19
* notice: last 14d: unq all: 3 19
* notice: prev accum: outdated-unq outdated-all / unq all: 625 990 / 640 1009
* notice: next accum: outdated-unq outdated-all / unq all: 625 990 / 642 1011
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -1 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [] / [2023-09-05 2023-09-19]

2023-09-19T00:41:29Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6229639224 # 1173
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-19
* notice: last 14d: unq all: 3 18
* notice: prev accum: outdated-unq outdated-all / unq all: 623 987 / 640 1008
* notice: next accum: outdated-unq outdated-all / unq all: 625 990 / 640 1009
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -1 -1 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [2023-09-04] / [2023-09-05 2023-09-18]

2023-09-18T08:12:32Z: