@@ -1,5 +1,5 @@
 {
-  "count": 18,
+  "count": 20,
   "uniques": 3,
   "clones": [
     {
@@ -50,6 +50,11 @@
     {
       "timestamp": "2023-09-19T00:00:00Z",
       "count": 3,
+      "uniques": 2
+    },
+    {
+      "timestamp": "2023-09-20T00:00:00Z",
+      "count": 2,
       "uniques": 2
     }
   ]
