@@ -1,3 +1,12 @@
+2023-09-20T08:12:23Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6245813577 # 1177
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-20
+* notice: last 14d: unq all: 3 20
+* notice: prev accum: outdated-unq outdated-all / unq all: 627 993 / 642 1012
+* notice: next accum: outdated-unq outdated-all / unq all: 627 993 / 644 1014
+* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
+* notice: removed / changed dates: [] / [2023-09-20]
+
 2023-09-20T00:40:56Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6242487658 # 1176
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-20
